About page beautification changes
Made card backgrounds consistant
Bottom cards arranged in columns

--- a/about.html
+++ b/about.html
@@ -216,7 +216,7 @@
     <div class="section-divider"></div>
 
     <!-- Historical Timeline -->
-    <section class="py-5 bg-light">
+    <section class="py-5">
         <div class="container">
             <h2 class="text-center">Temple Lineage</h2>
             <div class="timeline-container">
@@ -297,59 +297,64 @@
                                 <li>Muthana Panayil Temple</li>
                                 <li>Perettil Padinjattathil Temple</li>
                                 <li>Kollam Vilakam</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-6" data-aos="fade-up">
+                        <div class="temple-feature">
+                            <ul class="list-unstyled">
                                 <li>Thettikulam Madan Kavu</li>
                                 <li>Pullanikkodu Poykayil</li>
                                 <li>Pillaveedu Annapoorneswari Temple</li>
                                 <li>Karunilakkodu Kuzhivilakom Temple</li>
-                                </ul>
-                                </div>
+                            </ul>
                         </div>
+                    </div>
                 </div>
                 <p class="lead">
                     A unique aspect of these temples is that although they are all connected to Ulakudaya Perumal, only the
-                    Viduthi
-                    Vilakam Temple has a separate shrine dedicated specifically to him.
+                    Viduthi Vilakam Temple has a separate shrine dedicated specifically to him.
                 </p>
             </div>
         </div>
     </section>
-
-    <div class="section-divider"></div>
 
     <!-- Connection to Sree Narayana Guru -->
-    <section class="py-5 bg-light">
+    <section class="py-5">
         <div class="container">
-            <div class="content-card" data-aos="fade-up">
-                <h2 class="text-center">Connection to Sree Narayana Guru</h2>
-                <p class="lead">
-                    The temple at 'Viduthi Vilakam' was frequently visited by Sree Narayana Guru. His family members,
-                    including his father Madan Asan, his younger brothers Kochandi Vaidyan and Kuttiperumal Vaidyan, and
-                    their sister Kali, were also associated with this place.
-                </p>
-            </div>
-        </div>
-    </section>
-    <div class="section-divider"></div>
-    <!-- Spiritual Practices -->
-    <section class="py-5 bg-light">
-        <div class="container">
-            <div class="content-card" data-aos="fade-up">
-                <h2 class="text-center">Spiritual Traditions</h2>
-                <p class="lead">
-                    The temple complex includes an ancient 'sarppakavu' and shrines for sub-deities such as Yogeeswaran,
-                    Brahmarakshas, and Manthramoorthy. Within the 'Chuttambalam', there are shrines for Perumal(Shiva) and Ganapathi.
-                </p>
-                <div class="row">
-                    <div class="col-lg-6" data-aos="fade-up">
+            <div class="row">
+                <div class="col-md-6" data-aos="fade-up">
+                    <div class="content-card">
+                        <h2 class="text-center">Connection to Sree Narayana Guru</h2>
+                        <p class="lead">
+                            The temple at 'Viduthi Vilakam' was frequently visited by Sree Narayana Guru. His family members,
+                            including his father Madan Asan, his younger brothers Kochandi Vaidyan and Kuttiperumal Vaidyan, and
+                            their sister Kali, were also associated with this place. 
+                        </p>
+                        <p class="lead">
+                            The serene environment of the temple made it a suitable retreat for meditation and spiritual practice. 
+                            Sree Narayana Guru is believed to have conducted various discourses here, inspiring many with his teachings. 
+                            This site became a hub for social and religious reform under his influence, leaving a lasting legacy. 
+                            The historical importance of this place continues to attract devotees and scholars alike.
+                        </p>
+                    </div>                    
+                </div>
+                <div class="col-md-6" data-aos="fade-up">
+                    <div class="content-card">
+                        <h2 class="text-center">Spiritual Traditions</h2>
+                        <p class="lead">
+                            The temple complex features an ancient 'sarppakavu' and shrines for sub-deities such as Yogeeswaran, Brahmarakshas, and Manthramoorthy.
+                            Inside the 'Chuttambalam', there are shrines for Perumal(Shiva) and Ganapathi.
+                        </p>
                         <h3>Temple Rituals</h3>
                         <div class="temple-feature">
                             <ul class="list-unstyled">
-                                <li> Regular Ayilya Pooja</li>
-                                <li> Uruli Kamizhthal offerings</li>
-                                <li> Thottam Pattu performances</li>
-                                <li> Kalam Pooja ceremonies</li>
-                                </ul>
-                                </div>
+                                <li>Regular Ayilya Pooja</li>
+                                <li>Uruli Kamizhthal offerings</li>
+                                <li>Thottam Pattu performances</li>
+                                <li>Kalam Pooja ceremonies</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
