Header and list corrections

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             background-size: cover;
             background-position: center;
             color: white;
-            min-height: 300px;
+            /* min-height: 300px; */
             padding: 2rem 0;
             display: flex;
             align-items: center;
@@ -150,9 +150,9 @@
                 left: -10px;
             }
 
-            .header-background {
+            /* .header-background {
                 min-height: 400px;
-            }
+            } */
         }
 
         /* Touch-friendly elements */
@@ -192,9 +192,9 @@
     </nav>
 
     <!-- Hero Header -->
-    <header class="header-background">
-        <div class="container text-center">
-            <h1 class="mb-3" data-aos="fade-up">About our temple</h1>
+    <header class="text-white text-center py-5 header-background">
+        <div class="container">
+            <h1 class="display-4 mb-4" data-aos="fade-up">About our temple</h1>
         </div>
     </header>
 
@@ -237,14 +237,12 @@
                         <p> After his defeat, Ulakudaya Perumal, along with his sister and five brothers (Thampurans), was exiled. As they
                             journeyed, they settled in various locations where temples were subsequently established in their honor. These
                             temples were built at:
-                            <li>
-                                Chavara
-                                Mullaramkodu
-                                Pongummoodu
-                                Venjaramoodu
-                                Mandapakkunnu
-                                Vakkom Daivapura
-                            </li>
+                            <li>Chavara</li>
+                            <li>Mullaramkodu</li>
+                            <li>Pongummoodu</li>
+                            <li>Venjaramoodu</li>
+                            <li>Mandapakkunnu</li>
+                            <li>Vakkom Daivapura </li>
                         </p>
                     </div>
                 </div>
