Fixed images in events page cards

--- a/event.html
+++ b/event.html
@@ -68,8 +68,8 @@
             <div class="col-md-6 mb-4">
                 <div class="card">
                     <picture>
-                        <source srcset="static/images/events/event1.webp?v=1.0.1" type="image/webp">
-                        <img src="static/images/events/event1.jpg?v=1.0.1" class="card-img-top" alt="Annual Temple Festival">
+                        <source srcset="static/images/image7.webp?v=1.0.1" type="image/webp">
+                        <img src="static/images/image7.png?v=1.0.1" class="card-img-top fixed-size-image" alt="Annual Temple Festival">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Annual Temple Festival</h5>
@@ -82,8 +82,8 @@
             <div class="col-md-6 mb-4">
                 <div class="card">
                     <picture>
-                        <source srcset="static/images/events/event2.webp?v=1.0.1" type="image/webp">
-                        <img src="static/images/events/event2.jpg?v=1.0.1" class="card-img-top" alt="Special Pooja Ceremony">
+                        <source srcset="static/images/image8.webp?v=1.0.1" type="image/webp">
+                        <img src="static/images/image8.png?v=1.0.1" class="card-img-top fixed-size-image" alt="Special Pooja Ceremony">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Special Pooja Ceremony</h5>
