--- a/about.html
+++ b/about.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Ulakudaya Perumal Temple</title>
-    
+
+    <!-- General Meta Tags -->
+    <meta name="description"
+        content="Discover the rich history and cultural significance of the Ulakudaya Perumal Temple. Learn about its origins, the temple lineage, associated temples, spiritual traditions, and the connection to Sree Narayana Guru." />
+    <meta name="keywords"
+        content="Ulakudaya Perumal Temple, temple history, sacred origins, Ulakudaya Perumal, Kerala temples, Viduthi Vilakam Temple, Sree Narayana Guru, spiritual traditions, temple rituals" />
+    <meta name="author" content="Ulakudaya Perumal Temple" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="About - Ulakudaya Perumal Temple" />
+    <meta property="og:description"
+        content="Discover the rich history and cultural significance of the Ulakudaya Perumal Temple. Learn about its origins, the temple lineage, associated temples, spiritual traditions, and the connection to Sree Narayana Guru." />
+    <meta property="og:url" content="https://ulakudayaperumaltemple.org/about.html" />
+    <meta property="og:image" content="https://ulakudayaperumaltemple.org/static/images/header/temple-header.png?v=1.0.1" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="Ulakudaya Perumal Temple" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/style.css?v=1.0.1" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
