--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Ulakudaya Perumal Temple</title>
-    
+
+    <!-- General Meta Tags -->
+    <meta name="description"
+        content="Get in touch with the Ulakudaya Perumal Temple. Find contact details, temple administration information, and how to reach us. Connect for inquiries, donations, and temple services." />
+    <meta name="keywords"
+        content="Ulakudaya Perumal Temple, temple contact details, temple administration, how to reach, temple inquiries, donations, temple services, Kerala temples" />
+    <meta name="author" content="Ulakudaya Perumal Temple" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Contact Us - Ulakudaya Perumal Temple" />
+    <meta property="og:description"
+        content="Get in touch with the Ulakudaya Perumal Temple. Find contact details, temple administration information, and how to reach us. Connect for inquiries, donations, and temple services." />
+    <meta property="og:url" content="https://ulakudayaperumaltemple.org/contact.html" />
+    <meta property="og:image" content="https://ulakudayaperumaltemple.org/static/images/header/temple-header.png?v=1.0.1" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="Ulakudaya Perumal Temple" />
+
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
