--- a/event.html
+++ b/event.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events - Ulakudaya Perumal Temple</title>
-    
+
+    <!-- General Meta Tags -->
+    <meta name="description"
+        content="Stay updated with the important events and festivals at Ulakudaya Perumal Temple. Explore upcoming celebrations, rituals, and community activities." />
+    <meta name="keywords"
+        content="Ulakudaya Perumal Temple events, temple festivals, temple rituals, temple celebrations, Kerala temple events, upcoming events, temple activities" />
+    <meta name="author" content="Ulakudaya Perumal Temple" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Events - Ulakudaya Perumal Temple" />
+    <meta property="og:description"
+        content="Stay updated with the important events and festivals at Ulakudaya Perumal Temple. Explore upcoming celebrations, rituals, and community activities." />
+    <meta property="og:url" content="https://ulakudayaperumaltemple.org/event.html" />
+    <meta property="og:image" content="https://ulakudayaperumaltemple.org/static/images/header/temple-header.png?v=1.0.1" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="Ulakudaya Perumal Temple" />
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Cache-busted CSS -->
