--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Ulakudaya Perumal Temple</title>
 
+    <!-- General Meta Tags -->
+    <meta name="description"
+        content="Discover the rich history, sacred origins, and spiritual traditions of the Ulakudaya Perumal Temple." />
+    <meta name="keywords"
+        content="Ulakudaya Perumal Temple, temple history, sacred origins, Ulakudaya Perumal, Sree Narayana Guru, Kerala temples, Viduthi Vilakam Temple, temple rituals" />
+    <meta name="author" content="Ulakudaya Perumal Temple" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Home - Ulakudaya Perumal Temple"/>
+    <meta property="og:description"
+        content="Discover the rich history, sacred origins, and spiritual traditions of the Ulakudaya Perumal Temple." />
+    <meta property="og:url" content="https://ulakudayaperumaltemple.org"/>
+    <meta property="og:image" content="https://ulakudayaperumaltemple.org/static/images/header/temple-header.png?v=1.0.1"/>
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="Ulakudaya Perumal Temple" />
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Cache-busted CSS -->
