--- a/upi.html
+++ b/upi.html
@@ -3,8 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support Us - Ulakudaya Perumal Temple</title>
-    
+    <title>Offerings - Ulakudaya Perumal Temple</title>
+
+    <!-- General Meta Tags -->
+    <meta name="description"
+        content="Explore the various offerings and donations you can make at Ulakudaya Perumal Temple. Support the temple's rituals, festivals, and community initiatives" />
+    <meta name="keywords"
+        content="Ulakudaya Perumal Temple offerings, temple donations, UPI donations, temple account details, support temple rituals, temple contributions, Kerala temple offerings, spiritual donations" />
+    <meta name="author" content="Ulakudaya Perumal Temple" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Offerings - Ulakudaya Perumal Temple" />
+    <meta property="og:description"
+        content="Explore the various offerings and donations you can make at Ulakudaya Perumal Temple. Support the temple's rituals, festivals, and community initiatives" />
+    <meta property="og:url" content="https://ulakudayaperumaltemple.org/upi.html" />
+    <meta property="og:image" content="https://ulakudayaperumaltemple.org/static/images/header/temple-header.png?v=1.0.1" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="Ulakudaya Perumal Temple" />
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
