Added multiple images

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <!-- Temple Images Section -->
     <section class="container py-5">
         <h2 class="text-center mb-4">Temple Gallery</h2>
-        <div id="templeCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+        <div id="templeCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
             <!-- Indicators -->
             <div class="carousel-indicators" id="carouselIndicators"></div>
 
@@ -174,7 +174,7 @@
     <script>
         const imagesPath = "static/images/";
         const version = "v=1.0.1";
-        const imageFilenames = ["image1.png", "image2.png", "image3.png"];
+        const imageFilenames = ["image_01.jpg", "image_02.jpg", "image_03.jpg", "image_08.jpg", "image_06.jpg"];
         const carouselIndicators = document.getElementById("carouselIndicators");
         const carouselItems = document.getElementById("carouselItems");
 
