Animations for about and event pages

--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
     <!-- Hero Header -->
     <header class="text-white text-center py-5 header-background">
         <div class="container">
-            <h1 class="display-4 mb-4" data-aos="fade-up">About our temple</h1>
+            <h1 class="display-4 mb-4">About our temple</h1>
         </div>
     </header>
 
@@ -235,7 +235,7 @@
     <!-- Historical Timeline -->
     <section class="py-5">
         <div class="container">
-            <h2 class="text-center">Temple Lineage</h2>
+            <h2 class="text-center" data-aos="fade-up">Temple Lineage</h2>
             <div class="timeline-container">
                 <div class="timeline-item" data-aos="fade-up">
                     <div class="content-card">
