--- a/event.html
+++ b/event.html
@@ -24,6 +24,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <!-- Cache-busted CSS -->
     <link href="static/css/style.css?v=1.0.1" rel="stylesheet">
     <style>
@@ -80,9 +81,9 @@
 
     <!-- Events Section -->
     <section class="container py-5">
-        <h2 class="text-center mb-4">Upcoming Events</h2>
+        <h2 class="text-center mb-4" data-aos="fade-up">Upcoming Events</h2>
         <div class="row">
-            <div class="col-md-6 mb-4">
+            <div class="col-md-6 mb-4" data-aos="fade-up">
                 <div class="card">
                     <picture>
                         <source srcset="static/images/image7.webp?v=1.0.1" type="image/webp">
@@ -96,7 +97,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 mb-4">
+            <div class="col-md-6 mb-4" data-aos="fade-up">
                 <div class="card">
                     <picture>
                         <source srcset="static/images/image8.webp?v=1.0.1" type="image/webp">
@@ -123,5 +124,13 @@
     <!-- Bootstrap JS and Popper -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 800,
+            once: true,
+            // disable: 'mobile' // Commented to enable animations in mobile devices
+        });
+    </script>
 </body>
 </html>
