--- a/event.html
+++ b/event.html
@@ -66,7 +66,7 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link active" href="event.html">Events</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="upi.html">Offerings</a></li>
+                    <li class="nav-item"><a class="nav-link" href="offerings.html">Offerings</a></li>
                 </ul>
             </div>
         </div>
