modified contact page: cards

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <script>
         const imagesPath = "static/images/";
         const version = "v=1.0.1";
-        const imageFilenames = ["image_01.jpg", "image_02.jpg", "image_03.jpg", "image_08.jpg", "image_06.jpg"];
+        const imageFilenames = ["image_01.webp", "image_07.webp", "image_03.webp", "image_08.webp", "image_06.webp", "image_09.webp", "image_11.webp", "image_12.webp", "image_13.webp"];
         const carouselIndicators = document.getElementById("carouselIndicators");
         const carouselItems = document.getElementById("carouselItems");
 
