--- a/contact.html
+++ b/contact.html
@@ -163,10 +163,16 @@
                 <div class="contact-card h-100">
                     <h4 class="mb-4">Contact Information</h4>
                     <ul class="list-unstyled">
-                        <li class="mb-3"><i class="fas fa-map-marker-alt contact-icon"></i>123 Temple Road, Village Name, State, Country</li>
-                        <li class="mb-3"><i class="fas fa-phone contact-icon"></i>+91-9876543210</li>
+                        <li class="mb-3">
+                            <i class="fas fa-map-marker-alt contact-icon"></i>
+                            Viduthi Ulakudaya Perumal Temple Trust<br>
+                            Reg. No. IV/13/2004<br>
+                            Nedunganda, Trivandrum, Kerala
+                        </li>
+                        
+                        <!-- <li class="mb-3"><i class="fas fa-phone contact-icon"></i>+91-9876543210</li>
                         <li class="mb-3"><i class="fas fa-envelope contact-icon"></i>info@ulakudayaperumaltemple.com</li>
-                        <li><i class="fas fa-clock contact-icon"></i>Office Hours: 9:00 AM - 5:00 PM (Monday to Saturday)</li>
+                        <li><i class="fas fa-clock contact-icon"></i>Office Hours: 9:00 AM - 5:00 PM (Monday to Saturday)</li> -->
                     </ul>
                 </div>
             </div>
