Events page updated

--- a/event.html
+++ b/event.html
@@ -83,31 +83,39 @@
     <section class="container py-5">
         <h2 class="text-center mb-4" data-aos="fade-up">Upcoming Events</h2>
         <div class="row">
-            <div class="col-md-6 mb-4" data-aos="fade-up">
-                <div class="card">
-                    <picture>
-                        <source srcset="static/images/image7.webp?v=1.0.1" type="image/webp">
-                        <img src="static/images/image7.png?v=1.0.1" class="card-img-top fixed-size-image" alt="Annual Temple Festival">
+        <div class="col-md-6 mb-4" data-aos="fade-up">
+            <div class="card">
+                <picture>
+                    <source srcset="static/images/event/festival.webp" type="image/webp">
+                    <img src="static/images/event/festival.webp" class="card-img-top fixed-size-image" alt="Annual Temple Festival">
                     </picture>
                     <div class="card-body">
-                        <h5 class="card-title">Annual Temple Festival</h5>
-                        <p class="card-text">Join us for the grand annual festival featuring traditional rituals, cultural performances, and community feasts.</p>
-                        <p class="card-text"><strong>Date:</strong> March 10, 2025</p>
-                        <p class="card-text"><strong>Time:</strong> 6:00 AM to 9:00 PM</p>
+                    <h5 class="card-title"><strong>Pada Maholsavam</strong></h5>
+                    <p class="card-text">
+                        13th anniversary of the consecration and Pada Maholsavam of the ancient and renowned Viduthi
+                        Ulakudaya Perumal Temple. This festival will feature stunning lighting decorations and a vibrant
+                        procession
+                        with diverse art forms and musical performances.
+                    </p>
+                    <p class="card-text"><strong>Date:</strong> April 02 2025 to April 11 2025</p>
                     </div>
-                </div>
+                    </div>
+                    </div>
             </div>
             <div class="col-md-6 mb-4" data-aos="fade-up">
                 <div class="card">
                     <picture>
-                        <source srcset="static/images/image8.webp?v=1.0.1" type="image/webp">
-                        <img src="static/images/image8.png?v=1.0.1" class="card-img-top fixed-size-image" alt="Special Pooja Ceremony">
+                        <source srcset="static/images/event/pongala.webp" type="image/webp">
+                        <img src="static/images/event/pongala.webp" class="card-img-top fixed-size-image" alt="Special Pooja Ceremony">
                     </picture>
                     <div class="card-body">
-                        <h5 class="card-title">Special Pooja Ceremony</h5>
-                        <p class="card-text">Experience the divine blessings of a special pooja ceremony dedicated to Lord Ulakudaya Perumal.</p>
-                        <p class="card-text"><strong>Date:</strong> April 5, 2025</p>
-                        <p class="card-text"><strong>Time:</strong> 7:00 AM to 12:00 PM</p>
+                        <h5 class="card-title"><strong>Samooha Ponkala</strong></h5>
+                        <p class="card-text">
+                            Experience the divine blessings of the Samooha Ponkala, dedicated to Lord Ulakudaya Perumal, as part of
+                            the Pada Maholsavam.
+                        </p>
+                        <p class="card-text"><strong>Date:</strong> April 06, 2025</p>
+                        <p class="card-text"><strong>Time:</strong> 9:00 AM to 9:30 AM</p>
                     </div>
                 </div>
             </div>
