--- a/contact.html
+++ b/contact.html
@@ -119,6 +119,34 @@
                 background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.webp?v=1.0.2');
             }
         }
+        @media (min-width: 768px) {
+            .timeline-container::after {
+                left: 50%;
+            }
+
+            .timeline-item {
+                width: 50%;
+                padding: 20px 40px;
+            }
+
+            .timeline-item::after {
+                left: auto;
+                right: -10px;
+            }
+
+            .timeline-item.right {
+                left: 50%;
+            }
+
+            .timeline-item.right::after {
+                left: -10px;
+            }
+
+            /* .header-background {
+                min-height: 400px;
+            } */
+        }
+
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
@@ -139,15 +167,14 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="event.html">Events</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                     <li class="nav-item"><a class="nav-link" href="offerings.html">Offerings</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-
     <!-- Header -->
     <header class="text-white text-center py-5 header-background">
         <div class="container">
@@ -227,7 +254,7 @@
             </div>
 
             <!-- Convenors Section -->
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <div class="contact-card h-100">
                     <h4 class="mb-4">Temple Convenors</h4>
                     <ul class="list-unstyled">
@@ -271,7 +298,7 @@
                     </ul>
                     <button id="read-more" class="btn btn-primary">Read More</button>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
